aws-cloudformation/aws-tools/templates/network.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Launch an Alces network for use with Alces compute environments",
    "Parameters": {
        "NetworkCIDR": {
            "Description": "Enter an address range that is permitted to access the Clusterware master node. Leave blank if unknown",
            "Type": "String",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}/[0-9]{1,2}",
            "ConstraintDescription": "Please specify a valid IP range, e.g. 101.21.2.0/16"
        }
      },
        "Resources": {
        "ClusterVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "CidrBlock": "10.75.0.0/16",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true"
            }
        },
        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "DependsOn": "ClusterVPC",
            "Properties": {
                "VpcId": {
                    "Ref": "ClusterVPC"
                },
                "Tags": [
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "ClusterSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "ClusterVPC"
                },
                "CidrBlock": "10.75.0.0/24"
            }
        },
        "ClusterGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "DependsOn": "ClusterVPC"
        },
        "ClusterAttachGW": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "DependsOn": "ClusterVPC",
            "Properties": {
                "VpcId": {
                    "Ref": "ClusterVPC"
                },
                "InternetGatewayId": {
                    "Ref": "ClusterGateway"
                }
            }
        },
        "ClusterRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "ClusterAttachGW",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "ClusterGateway"
                }
            }
        },
        "SubnetToRouteTable": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "DependsOn": "RouteTable",
            "Properties": {
                "SubnetId": {
                    "Ref": "ClusterSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTable"
                }
            }
        },
        "ClusterSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "GroupDescription": "Open communication between cluster hosts",
                "VpcId": {
                    "Ref": "ClusterVPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "FromPort": "0",
                        "ToPort": "65535",
                        "CidrIp": "10.75.0.0/24"
                    },
                    {
                        "IpProtocol": "6",
                        "FromPort": "5900",
                        "ToPort": "5920",
                        "CidrIp": {
                           "Ref": "NetworkCIDR"
                        }
                    },
                    {
                        "IpProtocol": "6",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "NetworkCIDR"
                        }
                    },
                    {
                        "IpProtocol": "6",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": {
                            "Ref": "NetworkCIDR"
                        }
                    },
                    {
                        "IpProtocol": "6",
                        "FromPort": "64443",
                        "ToPort": "64443",
                        "CidrIp": {
                            "Ref": "NetworkCIDR"
                        }
                    },
                    {
                        "IpProtocol": "6",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "NetworkCIDR"
                        }
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "FromPort": "0",
                        "ToPort": "65535",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "VPCID": {
            "Value": {
                "Ref": "ClusterVPC"
            }
        },
        "GATEWAYID": {
            "Value": {
                "Ref": "ClusterGateway"
            }
        },
        "ROUTETABLEID": {
            "Value": {
                "Ref": "RouteTable"
            }
        },
        "SUBNETID": {
            "Value": {
                "Ref": "ClusterSubnet"
            }
        },
        "SECURITYGROUP": {
            "Value": {
                "Ref": "ClusterSecurityGroup"
            }
        }
    }
}
